--- a/index.html
+++ b/index.html
@@ -3,50 +3,137 @@
 <head>
   <meta charset="UTF-8">
   <title>Rec.net User Search</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    :root {
+      --accent: #ff9a00;
+      --accent-hover: #ffaa33;
+      --bg: #0e0e0e;
+      --card: #1a1a1a;
+      --text: #ffffff;
+      --muted: #888888;
+      --border: #2c2c2c;
+      --radius: 14px;
+      --transition: 0.3s ease;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      padding: 3em 1.5em;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+    }
+
+    .container {
+      max-width: 500px;
+      width: 100%;
+      background: linear-gradient(145deg, #1a1a1a, #111);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
       padding: 2em;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
+      backdrop-filter: blur(6px);
+      transition: var(--transition);
     }
+
     h1 {
-      color: #ff9a00;
+      color: var(--accent);
+      font-size: 1.8em;
+      margin-bottom: 1em;
+      text-align: center;
     }
-    input, button {
-      font-size: 1em;
-      padding: 0.5em;
-      margin-top: 0.5em;
-      border: none;
-      border-radius: 5px;
+
+    .form-group {
+      display: flex;
+      gap: 0.5em;
+      margin-bottom: 1em;
     }
+
     input {
-      width: 250px;
-    }
-    button {
-      background-color: #ff9a00;
-      color: #000;
-      cursor: pointer;
-      margin-left: 0.5em;
-    }
-    button:hover {
-      background-color: #ffaa33;
-    }
-    #output {
-      margin-top: 1em;
-      padding: 1em;
+      flex-grow: 1;
+      padding: 0.75em;
+      font-size: 1em;
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
       background-color: #111;
-      border: 1px solid #444;
-      border-radius: 8px;
+      color: var(--text);
+      outline: none;
+      transition: var(--transition);
+    }
+
+    input:focus {
+      border-color: var(--accent);
+    }
+
+    button {
+      padding: 0.75em 1.2em;
+      font-size: 1em;
+      font-weight: bold;
+      background-color: var(--accent);
+      color: #000;
+      border: none;
+      border-radius: var(--radius);
+      cursor: pointer;
+      transition: var(--transition);
+    }
+
+    button:hover {
+      background-color: var(--accent-hover);
+    }
+
+    #output {
+      margin-top: 1.2em;
+      padding: 1em;
+      background-color: var(--card);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      min-height: 80px;
+      transition: var(--transition);
+    }
+
+    .output-line {
+      margin: 0.4em 0;
+    }
+
+    .output-label {
+      font-weight: bold;
+      color: var(--accent-hover);
+    }
+
+    .icon {
+      margin-right: 0.3em;
+    }
+
+    @media (max-width: 500px) {
+      .form-group {
+        flex-direction: column;
+      }
+
+      button {
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Rec.net User Search</h1>
-  <input type="text" id="usernameInput" placeholder="Enter Rec Room username">
-  <button onclick="searchRecNet()">Search</button>
-
-  <div id="output">Results will appear here.</div>
+  <div class="container">
+    <h1>Rec.net User Search</h1>
+    <div class="form-group">
+      <input type="text" id="usernameInput" placeholder="Enter Rec Room username">
+      <button onclick="searchRecNet()">Search</button>
+    </div>
+    <div id="output">🔍 Enter a username above and press Search.</div>
+  </div>
 
   <script>
     async function searchRecNet() {
@@ -54,11 +141,11 @@
       const output = document.getElementById("output");
 
       if (!name) {
-        output.textContent = "⚠️ Please enter a username.";
+        output.innerHTML = "⚠️ <span class='output-line'>Please enter a username.</span>";
         return;
       }
 
-      output.textContent = "🔍 Searching...";
+      output.innerHTML = "🔍 <span class='output-line'>Searching...</span>";
 
       const apiKey = "5db1df5e";
       const apiURL = `https://apim.rec.net/accounts/account/search?name=${encodeURIComponent(name)}&apikey=${apiKey}`;
@@ -79,19 +166,19 @@
         const data = await response.json();
 
         if (!data || data.length === 0) {
-          output.textContent = "❌ No user found.";
+          output.innerHTML = "❌ <span class='output-line'>No user found.</span>";
         } else {
           const user = data[0];
           output.innerHTML = `
-            👤 <strong>Display Name:</strong> ${user.displayName}<br>
-            🆔 <strong>Username:</strong> ${user.username}<br>
-            🎮 <strong>Platform:</strong> ${user.platform || "N/A"}<br>
-            🧩 <strong>Account ID:</strong> ${user.accountId}
+            <div class="output-line">👤 <span class="output-label">Display Name:</span> ${user.displayName}</div>
+            <div class="output-line">🆔 <span class="output-label">Username:</span> ${user.username}</div>
+            <div class="output-line">🎮 <span class="output-label">Platform:</span> ${user.platform || "N/A"}</div>
+            <div class="output-line">🧩 <span class="output-label">Account ID:</span> ${user.accountId}</div>
           `;
         }
 
       } catch (err) {
-        output.textContent = `🚫 Error: ${err.message}`;
+        output.innerHTML = `🚫 <span class='output-line'>Error: ${err.message}</span>`;
       }
     }
   </script>
